public/css/index.css
@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;600;700&display=swap');

:root {
  /* colors */
  --brand: hsl(172 67% 45%);
  --warning: rgb(220 73 53);
  --surface: hsl(183 100% 15%);
  --surface-2: rgb(173, 224, 228);
  --text: hsl(186 14% 43%);
  --text-2: hsl(184 14% 56%);
  --bg-input: hsl(189 41% 97%);
  --white: hsl(0 0% 100%);

  /* fonts */
  --ff-sans: 'Space Mono', system-ui, sans-serif;
  --normal: 400;
  --semibold: 600;
  --bold: 700;

  /* spacing */
  --space-xxs: 0.25rem;
  --space-xs: 0.5rem;
  --space-sm: 0.75rem;
  --space-base: 1rem;
  --space-md: 1.5rem;
  --space-lg: 1.875rem;
  --space-xl: 2rem;
  --space-2xl: 3rem;
}

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* set the default html size to full page */
html {
  inline-size: 100%;
  block-size: 100%;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-inline-size: 100%;
  min-block-size: 100%;
  text-rendering: optimizeSpeed;
  line-height: 1.5;

  font-family: var(--ff-sans);
  font-size: 1rem;
  font-weight: var(--normal);
  background-color: var(--surface-2);
  color: var(--text);
  padding-block: 5ch;

  @media (width > 480px) {
    display: grid;
    place-content: center;
    padding-block: 2ch;
  }
}

/* Set minimum line-height for heading elements */
h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 1.15;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-inline-size: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* To hide the spin box on input */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  /* display: none; <- Crashes Chrome on hover */
  -webkit-appearance: none;
  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}

input[type='number'] {
  -moz-appearance: textfield; /* Firefox */
  font-variant-numeric: tabular-nums;
}

/* Content thats not visible but read by screen-readers */
.sr-only {
  position: absolute;
  inline-size: 1px;
  block-size: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

.calculator-layout {
  display: grid;
  gap: calc(var(--space-xl) + 0.25rem);

  @media (width > 480px) {
    place-items: center;
  }

  @media (width > 920px) {
    gap: calc(var(--space-2xl) + 2rem);
  }

  & > header {
    display: grid;
    place-content: center;
  }

  & > section {
    background-color: var(--white);
    border-radius: 2ch;

    max-inline-size: 50ch;
    display: grid;
    gap: var(--space-lg);
    padding: var(--space-xl);

    @media (width >= 920px) {
      grid-template-columns: repeat(2, 1fr);
      max-inline-size: 57.5em;
    }
  }
}

.calculation-form {
  display: grid;
  gap: calc(var(--space-xl) + 0.25rem);

  @media (width >= 920px) {
    padding: var(--space-base);
  }

  & label,
  & legend {
    font-size: 1.125rem;
  }

  & input[type='number'] {
    text-align: end;
    font-size: 1.5rem;
    font-weight: var(--bold);
    line-height: 1.5;

    background-color: var(--bg-input);
    color: var(--surface);

    padding-inline: var(--space-base);
    padding-block: var(--space-xxs);
    border-radius: 0.35ch;
    border: none;
    outline-offset: 2px;

    &::placeholder {
      color: var(--text);
    }

    &:focus {
      --outline-color: var(--brand);
      outline: 2px solid var(--outline-color);
    }
  }

  & :is(label, legend) {
    font-weight: var(--semibold);
  }

  & > .form-group {
    display: grid;
    gap: var(--space-xs);

    & > input[type='number'] {
      background-repeat: no-repeat;
      background-position: 10px center;
    }

    &:first-of-type {
      & > input[type='number'] {
        background-image: url('/images/icon-dollar.svg');
      }
    }

    &:last-of-type {
      grid-template-columns: repeat(2, 1fr);
      line-height: 1.35;

      & > span {
        justify-self: end;
        font-weight: var(--semibold);
        color: var(--warning);
      }

      & > input[type='number'] {
        inline-size: 100%;
        grid-column: 1/-1;
        background-image: url('/images/icon-person.svg');
      }
    }
  }

  & > fieldset {
    margin: 0;
    padding: 0;
    border: 0;

    & > .form-group {
      --repeat: 2;
      display: grid;
      gap: var(--space-base);
      grid-template-columns: repeat(var(--repeat), 1fr);

      @media (width >= 920px) {
        --repeat: 3;
      }

      & > label {
        cursor: pointer;
        background-color: var(--surface);
        color: var(--white);

        text-align: center;
        font-size: 1.5rem;
        font-weight: var(--bold);
        font-variant-numeric: tabular-nums;

        padding-block: var(--space-xxs);
        border-radius: 0.35ch;

        &:focus-within {
          --outline-color: var(--brand);
          outline: 2px solid var(--outline-color);
          outline-offset: 2px;
          background-color: var(--brand);
          color: var(--surface);
        }

        &:hover {
          background-color: var(--surface-2);
          color: var(--surface);
        }
      }
    }

    & legend {
      grid-column: 1/-1;
    }

    /* custom-tip */
    & input[type='number'] {
      inline-size: 100%;
      block-size: 100%;
      outline-offset: -2px;

      @media (width >= 920px) {
        &::placeholder {
          font-size: 1.35rem;
        }
      }
    }

    & input[type='radio'] {
      position: absolute;
      opacity: 0;
    }
  }
}

.calculated-output {
  background-color: var(--surface);
  border-radius: 1ch;
  padding-inline: var(--space-md);
  padding-block: var(--space-md);
  color: var(--text-2);

  display: grid;
  gap: var(--space-xl);

  @media (width >= 920px) {
    padding-inline: calc(var(--space-xl));
    padding-block: calc(var(--space-xl) + 0.5rem);

    align-content: space-between;

    & > button {
      margin-top: auto;
    }
  }

  & > div {
    display: grid;
    gap: 2.5ch;

    & > .tip-details,
    & > .total-details {
      display: grid;
      align-items: center;
      grid-template-columns: 1fr 2fr;
      gap: 2ch;
      font-size: 0.875rem;

      & > div {
        align-self: end;
      }

      & > div > p:first-of-type {
        color: var(--white);
        font-size: 1rem;
        font-weight: var(--semibold);
        line-height: 1.1;
        margin-bottom: var(--space-xxs);
      }

      & > span {
        font-size: 2.5rem;
        font-weight: var(--bold);
        font-variant-numeric: tabular-nums;
        color: var(--brand);
        line-height: 1.1;
        text-align: end;
        overflow-x: auto;

        @media (width >= 920px) {
          font-size: 3rem;
        }
      }
    }
  }

  & > button {
    cursor: pointer;
    background-color: var(--brand);
    color: var(--surface);
    border: none;
    border-radius: 0.25ch;
    padding-block: var(--space-xs);

    font-size: 1.5rem;
    font-weight: var(--bold);
    text-transform: uppercase;

    outline-offset: 2px;

    @media (prefers-reduced-motion: no-preference) {
      transition: transform 150ms ease-out;
    }

    &:hover {
      background-color: var(--surface-2);
      transform: scale(1.01);
    }

    &:focus {
      --outline-color: var(--brand);
      outline: 2px solid var(--outline-color);
    }

    &:active {
      transform: scale(0.98);
    }
  }
}

.hidden {
  display: none;
}

footer {
  text-align: center;
  padding-inline: var(--space-xl);
  color: var(--surface);

  & > div {
    max-inline-size: 45ch;
    margin-inline: auto;
    padding-block: 5ch;
  }

  & a {
    font-size: 1.125rem;
    color: hsl(0 0% 0%);
    font-weight: var(--bold);

    &:hover {
      color: var(--brand);
    }
  }
}

